--- a/src/about.html
+++ b/src/about.html
@@ -30,7 +30,7 @@
 <body>
 
     <div class="navbar">
-        <a href="about.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#services">Services</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
