--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="content">
-        <img src="camilo.jpeg" alt="Camilooo">
+        <img src="images/camilo.jpeg" alt="Camilo">
         <p>ABOUT ME</p>
     </div>
 
