--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="content">
-        <img src="images/camilo.jpeg" alt="Camilo">
+        <img src="images/camilo.jpeg" alt="t1">
         <p>ABOUT ME</p>
     </div>
 
