--- a/src/index.html
+++ b/src/index.html
@@ -1,62 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .navbar {
-            display: flex;
-            background-color: #333;
-            overflow: hidden;
-        }
-        .navbar a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-        .content {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-        }
-        .content img {
-            width: 35%; /* Adjust size as needed */
-            height: auto;
-            border-radius: 15px; /* Adjust the value to get the desired roundness */
-        }
-        .content p {
-            margin: 0;
-            font-size: 24px; /* Adjust font size as needed */
-            width: 50%; /* Ensure the text takes up the remaining space */
-            text-align: right; /* Align text to the right */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Test Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    .navbar {
+      display: flex;
+      background-color: #333;
+      overflow: hidden;
+    }
+
+    .navbar a {
+      color: white;
+      padding: 14px 20px;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    .content {
+      display: flex;
+      padding: 20px;
+      height: calc(100vh - 56px); /* Adjust for full height minus navbar */
+      align-items: flex-start; /* Align items at the top */
+    }
+
+    .content img {
+      width: 35%; /* Adjust size as needed */
+      height: auto;
+      border-radius: 15px; /* Adjust the value to get the desired roundness */
+    }
+
+    .text-container {
+      display: flex;
+      flex-direction: column; /* Stack items vertically */
+      justify-content: flex-start; /* Align text at the top */
+      width: 65%; /* Adjust size as needed */
+      padding-left: 20px; /* Add some space between the image and the text */
+      text-align: center; /* Center text within its own container */
+    }
+
+    .text-container p {
+      margin: 5px 0; /* Add some margin between paragraphs */
+      font-size: 24px; /* Adjust font size as needed */
+    }
+
+    .secondary-text {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 10px; /* Add some margin for spacing */
+    }
+
+    .secondary-text p {
+      margin: 5px 0;
+      font-size: 24px;
+    }
+
+    .secondary-text img {
+        width: 100px; /* Set a fixed width */
+      height: auto; /* Maintain aspect ratio */
+      border-radius: 15px; /* Adjust the value to get the desired roundness */
+      margin-top: 10px; /* Add some margin for spacing */
+    }
+
+    @keyframes color-change {
+      0% {
+        color: purple;
+      }
+      50% {
+        color: black;
+      }
+      100% {
+        color: purple;
+      }
+    }
+
+    .hunter-container p {
+      animation: color-change 1s infinite;
+    }
+  </style>
 </head>
 <body>
-
-    <div class="navbar">
-        <a href="about.html">Home</a>
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+  <div class="navbar">
+    <a href="about.html">Home</a>
+    <a href="#services">Services</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </div>
+  <div class="content">
+    <img src="images/camilo.jpeg" alt="Camilo">
+    <div class="text-container">
+      <p>Camilo Romero</p>
+      <p>Software Engineer</p>
+      <div class="secondary-text">
+        <div class="hunter-container">
+          <p>Hunter College</p>
+        </div>
+      </div>
     </div>
-
-    <div class="content">
-        <img src="images/camilo.jpeg" alt="t2">
-        <p>ABOUT ME</p>
-    </div>
-
+  </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
