--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test Page</title>
+  <title>Camilo Romero - Software Engineer</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -69,7 +69,7 @@
     }
 
     .secondary-text img {
-        width: 100px; /* Set a fixed width */
+      width: 100px; /* Set a fixed width */
       height: auto; /* Maintain aspect ratio */
       border-radius: 15px; /* Adjust the value to get the desired roundness */
       margin-top: 10px; /* Add some margin for spacing */
@@ -88,7 +88,14 @@
     }
 
     .hunter-container p {
-      animation: color-change 1s infinite;
+      animation: color-change 4s infinite;
+    }
+
+    .description {
+      font-size: 18px;
+      margin-top: 20px;
+      text-align: center;
+      color: #555;
     }
   </style>
 </head>
@@ -104,11 +111,7 @@
     <div class="text-container">
       <p>Camilo Romero</p>
       <p>Software Engineer</p>
-      <div class="secondary-text">
-        <div class="hunter-container">
-          <p>Hunter College</p>
-        </div>
-      </div>
+      <p class="description">Full-stack software engineer with expertise in backend development and databases.</p>
     </div>
   </div>
 </body>
