--- a/src/index.html
+++ b/src/index.html
@@ -117,8 +117,8 @@
       <p class="description">Full-stack software engineer with emphasis in backend development and databases.</p>
       <p> Here are some of my projects! </p>
       <div class="image-grid">
-        <img src="images/game.png" alt="Image 2">
-        <img src="images/vitaminverse.png" alt="Image 3">
+        <img src="images/game.jpeg" alt="Image 2">
+        <img src="images/vitaminverse.jpeg" alt="Image 3">
       </div>
     </div>
   </div>
