--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Camilo Romero - Software Engineer</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Libre Baskerville', serif;
       margin: 0;
       padding: 0;
     }
 
+    /* Your existing CSS styles here */
     .navbar {
       display: flex;
       background-color: #333;
@@ -113,7 +115,7 @@
       <img src="images/camilo.jpeg" alt="Camilo">
     </div>
     <div class="text-container">
-      <h1>CAMILO ROMERO, Software Engineer</h1>
+      <h1 style="font-family: 'Libre Baskerville', serif;">CAMILO ROMERO, Software Engineer</h1>
       <p class="description">Full-stack software engineer with emphasis in backend development and databases.</p>
       <p> Here are some of my projects! </p>
       <div class="image-grid">
@@ -124,6 +126,7 @@
   </div>
 </body>
 </html>
+
 
 
 
